# shogihome-lan

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: 不具合報告---bug-report.md  提案---suggestion.md  質問---question.md
.github/workflows/: audit.yml  release.yml  test.yml
assets/release/: README.txt  shim.cs  start.bat
engine-wrapper/: .env.example  common.py  config_editor.html  config_editor.py  engine-wrapper.mjs  engine-wrapper.py  engine_wrapper.py  engines.json.example  launcher.py  package-lock.json  package.json  pyproject.toml
engine-wrapper/scripts/: build_dist.py  generate_licenses.py
engine-wrapper/tests/: test_common.py  test_logic.py  test_network.py  test_wrapper.py
shogihome/: .dockerignore  .electron-builder.config.mjs  .env.example  .eslintrc.cjs  .prettierignore  Dockerfile  compose.yaml  index.html  layout-manager.html  monitor.html  package-lock.json  package.json  prompt.html  sea-config.json  server.ts  tsconfig.bg.json  tsconfig.json  vite.config-pwa.mts  vite.config.mts  webpack.config.cjs
shogihome/docs/: index.en.html  index.html  index.zh_tw.html  release.json  third-party-licenses.html
shogihome/docs-templates/: index.en.html  index.html  index.zh_tw.html
shogihome/docs/css/: style.css
shogihome/scripts/: audit-scripts.ts  build-docs-templates.ts  build-puzzles.ts  build-sea.mjs  build.mjs  copy-licenses.mjs  distribute-command.mjs  list-download-counts.mjs  publish-release.ts  report-license.mjs
shogihome/src/: vite-env.d.ts
(+324 files in other folders)
