[project]
name = "shogihome-lan-engine-wrapper"
version = "1.5.0"
description = "USI Engine wrapper for ShogiHome LAN (Python version)"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "packaging>=26.0",
    "pillow>=12.1.0",
    "pystray>=0.19.5",
    "python-dotenv>=1.0.1",
    "qrcode>=8.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.4.8",
    "pip-licenses>=5.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["B008"]
